fixes to pip alignment, sidebar and chat message

--- a/src/styles/chat-message.less
+++ b/src/styles/chat-message.less
@@ -39,7 +39,6 @@
     .icon {
       display: flex;
       aspect-ratio: 1;
-      height: max-content;
       margin: 0;
     }
     .oracle-result-row {
