--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -101,24 +101,24 @@
     font-family: inherit;
   }
 
-  button {
-    transition: var(--std-animation);
-    border-radius: unset;
-    width: unset;
-    margin: unset;
-    background: unset;
-    // font-size: unset;
-    // line-height: unset;
-    font-family: inherit;
-    cursor: pointer;
-    &:hover,
-    &:focus {
-      // background: unset;
-      // border: unset;
-      outline: none;
-      box-shadow: unset;
-    }
-  }
+  // button {
+  //   transition: var(--std-animation);
+  //   border-radius: unset;
+  //   width: unset;
+  //   margin: unset;
+  //   background: unset;
+  //   // font-size: unset;
+  //   // line-height: unset;
+  //   font-family: inherit;
+  //   cursor: pointer;
+  //   &:hover,
+  //   &:focus {
+  //     // background: unset;
+  //     // border: unset;
+  //     outline: none;
+  //     box-shadow: unset;
+  //   }
+  // }
   .window-content {
     height: 100%;
     padding: 5px;
